k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basealert
  namespace: basealert
spec:
  selector:
    app: basealert
  ports:
    - port: 8000
      targetPort: 8000
